# Lithium

./: .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  langgraph.json  pyproject.toml  requirements.txt  test_server.ipynb
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  unit-tests.yml
app/: __init__.py  auth.py  main.py  utils.py
app/agent_tools/: calculator.py
app/converge_diverge/: context.py  graph.py  prompts.py  state.py  tools.py
app/models/: __init__.py  parse_xml.py  serialize_xml.py
app/orient/: __init__.py  context.py  graph.py  models.py  prompts.py  state.py  tools.py
app/server/: __init__.py  dependencies.py  lifespan.py  models.py  routes.py
docs/adr/: 0001-xml-driven-structured-output.md  0002-langgraph-react-over-custom-loop.md  0003-fastapi-server-over-langgraph-platform.md  0004-human-in-the-loop-interrupts.md  0005-deployment-strategy.md
helm/lithium/: Chart.yaml  values.yaml
helm/lithium/templates/: deployment.yaml  ingress.yaml  service.yaml
scripts/: fly-deploy.sh  fly-setup.sh
src/models/: config.py
src/orient/: __init__.py  context.py  graph.py  models.py  prompts.py  state.py  tools.py
src/react_agent/: graph.py  state.py  utils.py
src/react_agent/tools/: calculator.py  search.py
tests/: test_calculator.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_calculator.py  test_configuration.py  test_parse_xml.py  test_serialize_xml.py  test_server.py  test_tools.py  test_utils.py
tests/unit_tests/converge_diverge/: test_context.py  test_graph.py
tests/unit_tests/orient/: test_context.py  test_graph.py  test_tools.py
tests/unit_tests/server/: test_lifespan.py  test_models.py  test_routes.py
