[project]
name = "lithium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "deepagents>=0.4.1",
    "fastapi>=0.129.0",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "pydantic-settings>=2.13.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-config=.coveragerc",
    "--cov-report=term-missing",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line length (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
